# modular-telegram-bot

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAQ.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PLUGINS.md  README.md  ROADMAP.md  SECURITY.md  bot.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  plugin_request.md
.github/workflows/: greetings.yml  python.yml  release.yml  stale.yml
core/: __init__.py  plugin_base.py  plugin_manager.py
plugins/: __init__.py  admin.py  calculator.py  converter.py  echo.py  encode.py  facts.py  fun.py  help.py  info.py  password.py  plugins_menu.py  poll.py  qrcode.py  quote.py  reminder.py  shorturl.py  start.py  translate.py  weather.py
utils/: __init__.py  database.py  logger.py
